# Build system requirements.
[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# Project metadata
[project]
name = "typing_extensions"
version = "4.12.0"
description = "Backported and Experimental Type Hints for Python 3.8+"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = [
    "annotations",
    "backport",
    "checker",
    "checking",
    "function",
    "hinting",
    "hints",
    "type",
    "typechecking",
    "typehinting",
    "typehints",
    "typing",
]
# Classifiers list: https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]

[project.urls]
Home = "https://github.com/python/typing_extensions"
Repository = "https://github.com/python/typing_extensions"
Changes = "https://github.com/python/typing_extensions/blob/main/CHANGELOG.md"
Documentation = "https://typing-extensions.readthedocs.io/"
"Bug Tracker" = "https://github.com/python/typing_extensions/issues"
"Q & A" = "https://github.com/python/typing/discussions"

# Project metadata -- authors. Flit stores this as a list of dicts, so it can't
# be inline above.
[[project.authors]]
name = "Guido van Rossum, Jukka Lehtosalo, Łukasz Langa, Michael Lee"
email = "levkivskyi@gmail.com"

[project.optional-dependencies]
dev = ["ruff==0.4.5"]

[tool.flit.sdist]
include = ["CHANGELOG.md", "README.md", "tox.ini", "*/*test*.py"]
exclude = []

[tool.ruff]
line-length = 90
target-version = "py38"
fix = true

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "ISC001",
    "PGH004",
    "RUF",
    "SIM201",
    "SIM202",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"!src/typing_extensions.py" = [
    "B018",
    "B024",
    "C4",
    "E302",
    "E306",
    "E501",
    "E701",
    "UP",
]

[tool.ruff.lint.isort]
extra-standard-library = ["tomllib"]
known-first-party = ["typing_extensions", "_typed_dict_test_helper"]
